--- a/src/app/cost-center/edit/edit.component.html
+++ b/src/app/cost-center/edit/edit.component.html
@@ -1,83 +1,95 @@
-<div class="client-form-container">
+<div class="cost-center-form-container">
     <mat-card>
       <mat-card-header>
-        <mat-card-title>{{ isEditMode ? 'Editar Cliente' : 'Criar Cliente' }}</mat-card-title>
+        <mat-card-title>{{ isEditMode ? 'Editar Centro de Custo' : 'Criar Centro de Custo' }}</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <form [formGroup]="clientForm" (ngSubmit)="onSubmit()">
+        <form [formGroup]="costCenterForm" (ngSubmit)="onSubmit()">
           <div class="form-row">
-            <mat-form-field appearance="fill" class="form-field">
-              <mat-label>Nome Fantasia</mat-label>
+            <mat-form-field class="form-field" appearance="fill">
+              <mat-label>Nome da Empresa</mat-label>
               <input matInput formControlName="companyName" required>
             </mat-form-field>
   
-            <mat-form-field appearance="fill" class="form-field">
-              <mat-label>Razão Social</mat-label>
+            <mat-form-field class="form-field" appearance="fill">
+              <mat-label>Nome Comercial</mat-label>
               <input matInput formControlName="businessName">
             </mat-form-field>
           </div>
   
           <div class="form-row">
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>CNPJ</mat-label>
               <input matInput formControlName="cnpj" required>
             </mat-form-field>
   
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>CEP</mat-label>
               <input matInput formControlName="addressZipCode">
             </mat-form-field>
           </div>
   
           <div class="form-row">
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>Rua</mat-label>
               <input matInput formControlName="addressStreet">
             </mat-form-field>
   
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>Número</mat-label>
               <input matInput type="number" formControlName="addressNumber">
             </mat-form-field>
           </div>
   
           <div class="form-row">
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>Complemento</mat-label>
               <input matInput formControlName="addressComplement">
             </mat-form-field>
   
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>Bairro</mat-label>
               <input matInput formControlName="addressDistrict">
             </mat-form-field>
           </div>
   
           <div class="form-row">
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>Cidade</mat-label>
               <input matInput formControlName="addressCity">
             </mat-form-field>
   
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>Estado</mat-label>
               <input matInput formControlName="addressState">
             </mat-form-field>
           </div>
-  
+
           <div class="form-row">
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>E-mail</mat-label>
-              <input matInput formControlName="email" type="email" required>
+              <input matInput formControlName="email">
             </mat-form-field>
   
-            <mat-form-field appearance="fill" class="form-field">
+            <mat-form-field class="form-field" appearance="fill">
               <mat-label>Senha</mat-label>
-              <input matInput formControlName="password" type="password" required>
+              <input matInput formControlName="password">
             </mat-form-field>
           </div>
   
-          <button mat-raised-button color="primary" type="submit" [disabled]="!clientForm.valid">{{ isEditMode ? 'Atualizar' : 'Criar' }}</button>
+          <div class="form-row">
+            <!-- <mat-form-field class="form-field" appearance="fill">
+              <mat-label>Cliente</mat-label>
+              <select matNativeControl formControlName="clientId">
+                <option *ngFor="let client of clients" [value]="client.id">{{ client.companyName }}</option>
+              </select>
+            </mat-form-field> -->
+            <client-select [(value)]="selectedClient"></client-select>
+          </div>
+  
+          <button mat-raised-button color="primary" type="submit" [disabled]="!costCenterForm.valid">
+            {{ isEditMode ? 'Atualizar' : 'Criar' }}
+          </button>
         </form>
       </mat-card-content>
     </mat-card>
