--- a/src/app/form/list/list.component.html
+++ b/src/app/form/list/list.component.html
@@ -23,9 +23,9 @@
       <ng-container matColumnDef="actions">
         <mat-header-cell *matHeaderCellDef> Ações </mat-header-cell>
         <mat-cell *matCellDef="let form">
-          <button mat-icon-button color="primary" (click)="editarFormulario(form)">
+          <!-- <button mat-icon-button color="primary" (click)="editarFormulario(form)">
             <mat-icon>edit</mat-icon>
-          </button>
+          </button> -->
           <button mat-icon-button color="warn" (click)="deletarFormulario(form.id)">
             <mat-icon>delete</mat-icon>
           </button>
