--- a/src/app/form/executions/view-execution/view-execution.component.html
+++ b/src/app/form/executions/view-execution/view-execution.component.html
@@ -1,6 +1,6 @@
 <mat-progress-bar *ngIf="loading"></mat-progress-bar>
 <ng-container *ngIf="!loading">
-    <mat-card class="mb-4">
+    <mat-card class="header mb-4">
         <mat-card-header>
             <mat-card-title>
                 Respondido por {{execution.technician.name}}
