--- a/src/app/technical-manager/list/list.component.html
+++ b/src/app/technical-manager/list/list.component.html
@@ -22,7 +22,7 @@
       <!-- Documento Column -->
       <ng-container matColumnDef="document">
         <mat-header-cell *matHeaderCellDef> Documento </mat-header-cell>
-        <mat-cell *matCellDef="let manager"> {{manager.document}} </mat-cell>
+        <mat-cell *matCellDef="let manager"> {{manager.document | cpfCnpj}} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="email">
