--- a/src/app/form/list/list.component.html
+++ b/src/app/form/list/list.component.html
@@ -1,7 +1,7 @@
 <div class="form-list-container">
     <mat-toolbar>
       <span>Formulários</span>
-      <cost-center-select (valueChange)="onCostCenterSelect($event)"></cost-center-select>
+      <cost-center-select class="h-[50px] ml-3" (valueChange)="onCostCenterSelect($event)"></cost-center-select>
       <span class="spacer"></span>
       <button mat-raised-button color="primary" [routerLink]="'edit'" *ngIf="user.role === roles.COST_CENTER">Adicionar Formulário</button>
     </mat-toolbar>
