--- a/src/app/form/list/list.component.html
+++ b/src/app/form/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="form-list-container">
+<div class="form-list-container p-4">
     <mat-toolbar>
       <span>Formulários</span>
       <cost-center-select class="h-[50px] ml-3" (valueChange)="onCostCenterSelect($event)"></cost-center-select>
