--- a/src/app/cost-center/list/list.component.scss
+++ b/src/app/cost-center/list/list.component.scss
@@ -1,3 +1,18 @@
 .cost-center-list-container {
     padding: 16px;
   }
+
+  .mat-toolbar {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+  }
+  
+  .spacer {
+    flex: 1 1 auto;
+  }
+  
+  .mat-table {
+    width: 100%;
+  }
+  
