--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,11 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.mat-toolbar {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 16px;
-}
+// .mat-toolbar {
+//   display: flex;
+//   justify-content: space-between;
+//   margin-bottom: 16px;
+// }
 
 .spacer {
   flex: 1 1 auto;
