--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   width: 100%;
 }
 
-.form-field {
-  width: 300px;
-}
+// form .form-field {
+//   width: 300px;
+// }
